[package]
name = "sheet_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
once_cell = "1.18"
uuid = { version = "1", features = ["v4"] }
hyper = { version = "1", features = ["full"] }
